--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "xml",
     "javascript",
     "json",
+	"yaml",
     "jsonpath",
+	"jsont",
     "parser",
     "pullparser",
     "pullparsing",
+	"pushparser",
+	"pushparsing",
     "sax",
     "stax"
   ],
