--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The Just-Good-Enough XML Parser",
   "main": "jgeXml.js",
   "scripts": {
-    "test": "node testRunner"
+    "test": "node testRunner",
+	"cover": "istanbul cover testRunner.js"
   },
   "repository": {
     "type": "git",
